--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,10 +3,10 @@
         window.machineConfig = {
             name: 'Thingking-Machine',
             instruction: 'thingking.txt',
-            work: "{{ '/assets/js/oaiapi.js' | relative_url }}",
-            token: 'openai.txt',
-            apiUrl: 'https://api.openai.com/v1/chat/completions',
-            llm: 'gpt-4.1'
+            work: "{{ '/assets/js/depsekapi.js' | relative_url }}",
+            token: 'depsek.txt',
+            apiUrl: 'https://api.deepseek.com/chat/completions',
+            llm: 'deepseek-chat'
         };
 </script>
 
